--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     color: #777;
     line-height: 1.7;
 }
-
+/*
 h1,h2,h3,h4,h5,h6 {
     font-weight: 600;
     color: #222;
@@ -18,6 +18,8 @@ a {
 a:hover {
     color: #F58d17;
 }
+*/
+
 
 img{
     width: 100%;
@@ -33,11 +35,7 @@ img{
     font-size: 20px;
 }
 
-.btn-brand:hover {
-    border-color: #d37810;
-    background-color: #d37810;
-    color: #fff;
-}
+
 .bg-cover{
     background-position: center !important; 
     background-size: cover !important;
@@ -74,3 +72,6 @@ img{
     height: 70px;
     margin: auto;
 }
+
+
+
